# LargeExecutionModels

./: README.md  pyproject.toml
.github/workflows/: lems_ci.yml
example_and_results/crypto_tables/: crypto_results_table_15.0_table1_comprehensive.csv  crypto_results_table_15.0_table1_comprehensive.tex  crypto_results_table_15.0_table2_min_period_6.csv  crypto_results_table_15.0_table2_min_period_6.tex  crypto_results_table_15.0_table_min_period_11.csv  crypto_results_table_15.0_table_min_period_11.tex  crypto_results_table_15.0_table_min_period_12.csv  crypto_results_table_15.0_table_min_period_12.tex  crypto_results_table_15.0_table_min_period_9.csv  crypto_results_table_15.0_table_min_period_9.tex  crypto_results_table_250.0_table1_comprehensive.csv  crypto_results_table_250.0_table1_comprehensive.tex  crypto_results_table_250.0_table2_min_period_6.csv  crypto_results_table_250.0_table2_min_period_6.tex  crypto_results_table_250.0_table_min_period_11.csv  crypto_results_table_250.0_table_min_period_11.tex  crypto_results_table_250.0_table_min_period_12.csv  crypto_results_table_250.0_table_min_period_12.tex  crypto_results_table_250.0_table_min_period_9.csv  crypto_results_table_250.0_table_min_period_9.tex  crypto_results_table_90.0_table1_comprehensive.csv  crypto_results_table_90.0_table1_comprehensive.tex  crypto_results_table_90.0_table2_min_period_6.csv  crypto_results_table_90.0_table2_min_period_6.tex  (+6 more)
lems/: __init__.py  data_formater.py  loss.py  metrics.py  models.py
tests/: test_jax.py  test_tensorflow.py  test_torch.py
(+10 files in other folders)
