[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lems" 
version = "0.1.1" 
description = "Large Execution Models"
authors = [ "Rémi Genet", "Hugo Inzirillo"]  
readme = "README.md"  
packages = [{include = "lems"}]  

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
keras = "^3.0.0"
tkan = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.6.1"
tensorflow = "^2.15.0"
torch = "^2.0.0"
jax = "^0.4.13"
jaxlib = "^0.4.13"
pandas = "^2.0.0"
numpy = "^2.0.0"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Can't initialize NVML:UserWarning",
    "ignore:jax.xla_computation is deprecated:DeprecationWarning",
    "ignore:__array_wrap__ must accept context and return_scalar arguments:DeprecationWarning:torch",
    "ignore:__array__ implementation doesn't accept a copy keyword.*:DeprecationWarning:keras",
    "ignore:__array__ implementation doesn't accept a copy keyword.*:DeprecationWarning",
]
